--- a/style.css
+++ b/style.css
@@ -58,10 +58,10 @@ header {
 /* INTRO SECTIONS */
 .intro {
     background-color: hsl(256, 26%, 20%);
-    max-width: 375px;
 }
 .image-intro-mobile {
     margin-top: 0;
+    text-align: center;
 }
 .intro-text {
     padding: 30px 30px 0;
