--- a/style.css
+++ b/style.css
@@ -59,8 +59,8 @@ header {
 .intro {
     background-color: hsl(256, 26%, 20%);
 }
-.image-intro-mobile {
-    margin: 0 auto;
+.intro-content {
+    text-align: center;
 }
 .intro-text {
     padding: 30px 30px 0;
